# BlinkEsportsBetLive

./: README.md
code/backend/rust_backend/: Cargo.toml  config.yaml  run_backend.sh
code/backend/rust_backend/code/mobile/BlinkBetLive-app/app/: prediction-detail.tsx
code/backend/rust_backend/src/: config.rs  lib.rs  main.rs  router.rs
code/backend/rust_backend/src/controllers/: action_controller.rs  admin_controller.rs  http_controller.rs  match_controller.rs  mod.rs  user_controller.rs
code/backend/rust_backend/src/models/: match_entity.rs  match_pool_entity.rs  mod.rs  team_entity.rs  user_bet_entity.rs  user_entity.rs
code/backend/rust_backend/src/services/: database_service.rs  event_listener.rs  match_service.rs  mod.rs  pandascore_service.rs
code/backend/rust_backend/src/utils/: mod.rs
code/blink_bet_contract/: Anchor.toml
code/blink_bet_contract/programs/blink_bet_contract/: Cargo.toml
code/blink_bet_contract/programs/blink_bet_contract/src/: errors.rs  events.rs  lib.rs
code/blink_bet_contract/programs/blink_bet_contract/src/instructions/: claim_prize.rs  initialize_config.rs  initialize_match.rs  mod.rs  place_bet.rs  settle_match.rs
code/blink_bet_contract/programs/blink_bet_contract/src/state/: config.rs  match_pool.rs  mod.rs  user_bet.rs
code/blink_bet_contract/programs/blink_bet_contract/src/utils/: mod.rs
code/dapp/: index.html  package-lock.json  package.json
doc/: idea.md  技术架构.md  数据库设计.md  智能合约设计.md  需求.md
doc/app/: android_build_guide.md
doc/contract/: test_report.md
scripts/db/: add_solana_fields.sql  init_db.sql  (+3 more)
(+119 files in other folders)
